--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -14,28 +14,90 @@
             type="com.minseongkim.movie_sample.presentation.viewmodel.MovieViewModel" />
     </data>
 
-    <androidx.constraintlayout.widget.ConstraintLayout
+    <androidx.core.widget.NestedScrollView
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        tools:context=".presentation.ui.HomeFragment">
+        android:layout_height="wrap_content"
+        android:fillViewport="true"
+        android:overScrollMode="never">
 
-        <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/movie_recyclerview"
-            android:layout_width="0dp"
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:adapter="@{adapter}"
-            android:orientation="vertical"
-            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="1.0"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.0"
-            app:movieMainItems="@{viewModel.uiState}"
-            tools:listitem="@layout/item_movie_home" />
+            tools:context=".presentation.ui.HomeFragment">
+
+            <androidx.appcompat.widget.AppCompatImageView
+                android:id="@+id/movie_main_image"
+                android:layout_width="0dp"
+                android:layout_height="@dimen/main_image_height"
+                android:scaleType="centerCrop"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.0"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                app:mainImage="@{viewModel.testUrl}" />
+
+            <View
+                android:id="@+id/movie_main_gradiant_layout"
+                android:layout_width="0dp"
+                android:layout_height="100dp"
+                android:background="@drawable/gradient_movie_main"
+                app:layout_constraintBottom_toBottomOf="@+id/movie_main_image"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent" />
+
+            <androidx.appcompat.widget.AppCompatButton
+                android:id="@+id/movie_main_add_button"
+                style="@style/button_main_sub"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:background="@null"
+                android:drawableTop="@drawable/icon_add_24"
+                android:text="@string/button_add"
+                app:layout_constraintBottom_toBottomOf="@+id/movie_main_image"
+                app:layout_constraintEnd_toStartOf="@+id/movie_main_play_button"
+                app:layout_constraintStart_toStartOf="parent" />
+
+            <androidx.appcompat.widget.AppCompatButton
+                android:id="@+id/movie_main_play_button"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:background="@drawable/button_play_style"
+                android:drawableStart="@drawable/icon_play_24"
+                android:text="@string/button_play"
+                android:textColor="@color/black"
+                app:layout_constraintBottom_toBottomOf="@+id/movie_main_image"
+                app:layout_constraintEnd_toStartOf="@+id/movie_main_info_button"
+                app:layout_constraintHorizontal_chainStyle="spread"
+                app:layout_constraintStart_toEndOf="@id/movie_main_add_button" />
+
+            <androidx.appcompat.widget.AppCompatButton
+                android:id="@+id/movie_main_info_button"
+                style="@style/button_main_sub"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:background="@null"
+                android:drawableTop="@drawable/icon_info_24"
+                android:text="@string/button_info"
+                app:layout_constraintBottom_toBottomOf="@+id/movie_main_image"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toEndOf="@+id/movie_main_play_button" />
 
 
-    </androidx.constraintlayout.widget.ConstraintLayout>
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/movie_recyclerview"
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_marginTop="@dimen/vertical_margin_medium"
+                android:adapter="@{adapter}"
+                android:orientation="vertical"
+                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/movie_main_image"
+                app:movieMainItems="@{viewModel.uiState}"
+                tools:listitem="@layout/item_movie_home" />
+        </androidx.constraintlayout.widget.ConstraintLayout>
 
+    </androidx.core.widget.NestedScrollView>
 </layout>
