--- a/app/src/main/res/layout/item_movie_home.xml
+++ b/app/src/main/res/layout/item_movie_home.xml
@@ -19,9 +19,9 @@
             android:id="@+id/movie_title"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="8dp"
-            android:layout_marginTop="8dp"
-            android:textSize="20sp"
+            android:layout_marginStart="@dimen/horizontal_margin_small"
+            android:layout_marginTop="@dimen/horizontal_margin_small"
+            android:textSize="@dimen/font_medium"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             tools:text="Movie title" />
@@ -30,6 +30,7 @@
             android:id="@+id/poster_recyclerview"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
+            android:layout_marginStart="@dimen/horizontal_margin_small"
             android:adapter="@{adapter}"
             android:orientation="horizontal"
             app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
