--- a/app/src/main/res/layout/item_movie_poster.xml
+++ b/app/src/main/res/layout/item_movie_poster.xml
@@ -11,7 +11,7 @@
     <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_margin="16dp">
+        android:layout_margin="@dimen/horizontal_margin_small">
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:id="@+id/movie_layout"
@@ -20,15 +20,14 @@
 
             <androidx.appcompat.widget.AppCompatImageView
                 android:id="@+id/movie_poster"
-                android:layout_width="300dp"
-                android:layout_height="350dp"
-                android:background="@color/black"
+                android:layout_width="@dimen/poster_width"
+                android:layout_height="@dimen/poster_height"
                 android:scaleType="centerCrop"
-                app:image="@{movie.posterImage}"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
+                app:layout_constraintTop_toTopOf="parent"
+                app:posterImage="@{movie.posterImage}" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
 
