add logic for local caching

--- a/app/src/main/res/layout/item_movie_home.xml
+++ b/app/src/main/res/layout/item_movie_home.xml
@@ -1,5 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout>
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools">
 
     <data>
 
@@ -9,9 +11,7 @@
 
     </data>
 
-    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:app="http://schemas.android.com/apk/res-auto"
-        xmlns:tools="http://schemas.android.com/tools"
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
@@ -20,13 +20,14 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="@dimen/horizontal_margin_small"
-            android:layout_marginTop="@dimen/horizontal_margin_small"
-            android:textSize="@dimen/font_medium"
+            android:layout_marginTop="@dimen/horizontal_margin_medium"
+            android:textSize="@dimen/font_large"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             tools:text="Movie title" />
 
         <androidx.recyclerview.widget.RecyclerView
+            android:contentDescription="@string/movie_list"
             android:id="@+id/poster_recyclerview"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
