--- a/app/src/main/res/layout/item_movie_poster.xml
+++ b/app/src/main/res/layout/item_movie_poster.xml
@@ -12,7 +12,8 @@
     <androidx.cardview.widget.CardView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_margin="@dimen/horizontal_margin_small">
+        android:layout_margin="@dimen/horizontal_margin_small"
+        android:backgroundTint="@color/skeleton">
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:id="@+id/movie_layout"
